2014-06-11  Simon Fraser  <simon.fraser@apple.com>

        Make FrameView 8 bytes smaller
        https://bugs.webkit.org/show_bug.cgi?id=133771

        Reviewed by Anders Carlsson.

        m_borderX and m_borderY were historical cruft.

        * page/FrameView.cpp:
        (WebCore::FrameView::reset):
        * page/FrameView.h:

2014-06-11  David Kilzer  <ddkilzer@apple.com>

        WindowFeatures arguments shoud ignore invalid characters in values
        <http://webkit.org/b/133703>
        <rdar://problem/17254118>

        Reviewed by Andy Estes.

        Test: fast/dom/Window/window-property-invalid-characters-ignored.html

        * page/WindowFeatures.cpp:
        (WebCore::WindowFeatures::WindowFeatures): Set |length| based on
        |buffer|, not |features|.  Switch to using a for loop.  Switch
        to unsigned types since we are working with positive offsets
        into a String.

2014-06-11  David Kilzer  <ddkilzer@apple.com>

        Viewport arguments should ignore invalid characters in values
        <http://webkit.org/b/133555>
        <rdar://problem/17179650>

        Reviewed by Daniel Bates.

        Test: fast/viewport/viewport-warnings-7.html

        * dom/Document.cpp:
        (WebCore::Document::processArguments): Set |length| based on
        |buffer|, not |features|.  Switch to using a for loop.  Switch
        to unsigned types since we are working with positive offsets
        into a String.

2014-06-11  Anders Carlsson  <andersca@apple.com>

        Move some HTTP header field accessors to ResourceRequestBase.cpp
        https://bugs.webkit.org/show_bug.cgi?id=133773

        Reviewed by Andreas Kling.

        This will avoid having to include HTTPHeaderNames.h from ResourceRequestBase.h.

        * platform/network/ResourceRequestBase.cpp:
        (WebCore::ResourceRequestBase::httpContentType):
        (WebCore::ResourceRequestBase::setHTTPContentType):
        (WebCore::ResourceRequestBase::httpReferrer):