@@ -817,6 +817,7 @@ __ZN7WebCore19MediaSessionManager30didReceiveRemoteControlCommandENS_12MediaSess
 __ZN7WebCore19MediaSessionManager9addClientEPNS_25MediaSessionManagerClientE
 __ZN7WebCore19ResourceRequestBase11setHTTPBodyEN3WTF10PassRefPtrINS_8FormDataEEE
 __ZN7WebCore19ResourceRequestBase13setHTTPMethodERKN3WTF6StringE
+__ZN7WebCore19ResourceRequestBase15setHTTPReferrerERKN3WTF6StringE
 __ZN7WebCore19ResourceRequestBase18setHTTPHeaderFieldEPKcRKN3WTF6StringE
 __ZN7WebCore19ResourceRequestBase19addHTTPHeaderFieldsERKNS_13HTTPHeaderMapE
 __ZN7WebCore19ResourceRequestBase22defaultTimeoutIntervalEv
